k8s/taskplanner-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskplanner-service
  labels:
    app: taskplanner
spec:
  replicas: 1              # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: taskplanner     # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: taskplanner   # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
      - image: taskplanner-image  # образ Docker
        imagePullPolicy: Never    # вказує k8s, що образ не потрібно завантажувати
        name: taskplanner         # ім'я контейнеру
        ports:
          - containerPort: 8080   # порт по якому можна звертатись до поди
