k8s/taskplanner-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskplanner-service
  labels:
    app: taskplanner
spec:
  type: ClusterIP  # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
  - port: 80          # порт по якому можна звератись до сервісу
    targetPort: 8080  # порт контейнера
    protocol: TCP
    name: http
  selector:
    app: taskplanner # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
