k8s/taskplanner-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskplanner-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - pathType: "Prefix"
        path: /
        backend:
          service:
            name: taskplanner-service
            port:
              number: 80
